# nes-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  taplo.toml
.github/workflows/: ci.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/guide/: controls.md  installation.md  running.md
docs/src/impl/: architecture.md
docs/src/nes/: apu.md  bus.md  controllers.md  cpu.md  mappers.md  overview.md  ppu.md  regions.md
docs/src/pipeline/: audio.md  frame-loop.md  video.md
src/: frontend.rs  main.rs  nes.rs
src/frontend/: audio.rs  config.rs  filebrowser.rs  input.rs  video.rs
src/nes/: bus.rs  cartridge.rs  controller.rs  framebuffer.rs  region.rs  stub.rs
src/nes/apu/: mixer.rs  mod.rs  regs.rs  sequencer.rs  tick.rs
src/nes/apu/channels/: dmc.rs  mod.rs  noise.rs  pulse.rs  triangle.rs
src/nes/apu/units/: envelope.rs  length.rs  linear.rs  mod.rs  sweep.rs
src/nes/cpu/: addr.rs  handlers.rs  mod.rs  opcodes.rs  step.rs
src/nes/mapper/: axrom.rs  camerica.rs  cnrom.rs  color_dreams.rs  gxrom.rs  mmc1.rs  mmc2.rs  mmc3.rs  mod.rs  nrom.rs  uxrom.rs
src/nes/ppu/: addr.rs  mod.rs  palette.rs  regs.rs  render.rs  tick.rs
